--- a/affable/css/style.less
+++ b/affable/css/style.less
@@ -271,6 +271,11 @@ p > code, p > a code {
   background: lighten(#e9e9e9, 5%);
   border: none;
 
+  overflow-x: auto;
+  overflow-y: hidden;
+  word-wrap: normal;
+  white-space: pre;
+
   padding: 0.8em 1em 0.8em 1.2em;
 
   font-size: 0.85em;
